Rob modified for 32 and 64 bit computers